variant plus link to GitHub

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>
+      My GitHub repository <a href="https://github.com/maskatK/weather.git"> https://github.com/maskatK/weather.git </a>
+      </p>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
