--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         </div>
       </div>
       <div class="row">
+        <form>
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="serch_city" placeholder="Type of city" autocomplete="off" aria-label="Recipient's username" aria-describedby="button-addon2">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Send</button>
-        </div>                         
+          <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Send</button>
+          </div> 
+        </form>                        
       </div>
       <div class="row">
          <div class="col" id="your_city">Your city</div>
